temporarily remove macos for fixing tests

--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -62,14 +62,15 @@ jobs:
           vtk-prefix: ""
           shells: "bash"
 
-  sdks-win-mac:
+  sdks-win-mac:  # temporarily mac disabled
     name: Build OCCT SDK for ${{ matrix.python-version }} on ${{ matrix.os }} (${{ matrix.use-vtk }})
     runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: false
       matrix:
-        os: ["macos-15-intel", "macos-15", "windows-2022"]
+        # os: ["macos-15-intel", "macos-15", "windows-2022"]
+        os: ["windows-2022"]
         # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
@@ -77,16 +78,16 @@ jobs:
         #   - python-version: "3.14"
         #     use-vtk: "vtk"
         include:
-          - os: "macos-15"
-            vtk-libs: ".dylibs/libvtk*.dylib"
-            vtk-suffix: "/"
-            vtk-prefix: ""
-            shells: "bash"
-          - os: "macos-15-intel"
-            vtk-libs: ".dylibs/libvtk*.dylib"
-            vtk-suffix: "/"
-            vtk-prefix: ""
-            shells: "bash"
+          # - os: "macos-15"
+          #   vtk-libs: ".dylibs/libvtk*.dylib"
+          #   vtk-suffix: "/"
+          #   vtk-prefix: ""
+          #   shells: "bash"
+          # - os: "macos-15-intel"
+          #   vtk-libs: ".dylibs/libvtk*.dylib"
+          #   vtk-suffix: "/"
+          #   vtk-prefix: ""
+          #   shells: "bash"
           - os: "windows-2022"
             vtk-libs: "vtk*.dll"
             vtk-suffix: "/"
@@ -148,11 +149,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["macos-15", "windows-2022"]
+        # os: ["macos-15", "windows-2022"]
+        os: ["windows-2022"]
         python-version: ["3.13"]
         include:
-          - os: "macos-15"
-            plat: "macosx_11_0_arm64 macosx_11_0_x86_64"
+          # - os: "macos-15"
+          #   plat: "macosx_11_0_arm64 macosx_11_0_x86_64"
           - os: "windows-2022"
             plat: "win_amd64"
 
@@ -260,7 +262,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["macos-15-intel", "macos-15", "windows-2022"]
+        # os: ["macos-15-intel", "macos-15", "windows-2022"]
+        os: ["windows-2022"]
         # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
@@ -268,20 +271,20 @@ jobs:
         #   - python-version: "3.14"
         #     use-vtk: "vtk"
         include:
-          - os: "macos-15"
-            delocate: delocate
-            plat: macosx_11_0_arm64
-            module: "OCP.*.so"
-            env: "MACOSX_DEPLOYMENT_TARGET=11.0"
-            shells: "bash"
-            ocp-source-tag: "macos-15"
-          - os: "macos-15-intel"
-            delocate: delocate
-            plat: macosx_11_0_x86_64
-            module: "OCP.*.so"
-            env: "MACOSX_DEPLOYMENT_TARGET=11.0"
-            shells: "bash"
-            ocp-source-tag: "macos-15"
+          # - os: "macos-15"
+          #   delocate: delocate
+          #   plat: macosx_11_0_arm64
+          #   module: "OCP.*.so"
+          #   env: "MACOSX_DEPLOYMENT_TARGET=11.0"
+          #   shells: "bash"
+          #   ocp-source-tag: "macos-15"
+          # - os: "macos-15-intel"
+          #   delocate: delocate
+          #   plat: macosx_11_0_x86_64
+          #   module: "OCP.*.so"
+          #   env: "MACOSX_DEPLOYMENT_TARGET=11.0"
+          #   shells: "bash"
+          #   ocp-source-tag: "macos-15"
           - os: "windows-2022"
             delocate: delvewheel
             plat: win_amd64
@@ -318,8 +321,8 @@ jobs:
       matrix:
         os:
           [
-            "macos-15-intel",
-            "macos-15",
+            # "macos-15-intel",
+            # "macos-15",
             "ubuntu-22.04",
             "ubuntu-22.04-arm",
             "windows-2022",
@@ -331,10 +334,10 @@ jobs:
         #   - python-version: "3.14"
         #     use-vtk: "vtk"
         include:
-          - os: "macos-15-intel"
-            runner: macos-15-intel
-          - os: "macos-15"
-            runner: macos-15
+          # - os: "macos-15-intel"
+          #   runner: macos-15-intel
+          # - os: "macos-15"
+          #   runner: macos-15
           - os: "ubuntu-22.04"
             runner: ubuntu-22.04
           - os: "ubuntu-22.04-arm"
