add back all OS and Python versions

--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -35,12 +35,11 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-22.04", "ubuntu-22.04-arm"]
-        # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        python-version: ["3.13"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
-        # exclude:
-        #   - python-version: "3.14"
-        #     use-vtk: "vtk"
+        exclude:
+          - python-version: "3.14"
+            use-vtk: "vtk"
         include:
           - os: "ubuntu-22.04"
             runner: ubuntu-latest
@@ -62,32 +61,30 @@ jobs:
           vtk-prefix: ""
           shells: "bash"
 
-  sdks-win-mac:  # temporarily mac disabled
+  sdks-win-mac:
     name: Build OCCT SDK for ${{ matrix.python-version }} on ${{ matrix.os }} (${{ matrix.use-vtk }})
     runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: false
       matrix:
-        # os: ["macos-15-intel", "macos-15", "windows-2022"]
-        os: ["windows-2022"]
-        # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        python-version: ["3.13"]
+        os: ["macos-15-intel", "macos-15", "windows-2022"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
-        # exclude:
-        #   - python-version: "3.14"
-        #     use-vtk: "vtk"
+        exclude:
+          - python-version: "3.14"
+            use-vtk: "vtk"
         include:
-          # - os: "macos-15"
-          #   vtk-libs: ".dylibs/libvtk*.dylib"
-          #   vtk-suffix: "/"
-          #   vtk-prefix: ""
-          #   shells: "bash"
-          # - os: "macos-15-intel"
-          #   vtk-libs: ".dylibs/libvtk*.dylib"
-          #   vtk-suffix: "/"
-          #   vtk-prefix: ""
-          #   shells: "bash"
+          - os: "macos-15"
+            vtk-libs: ".dylibs/libvtk*.dylib"
+            vtk-suffix: "/"
+            vtk-prefix: ""
+            shells: "bash"
+          - os: "macos-15-intel"
+            vtk-libs: ".dylibs/libvtk*.dylib"
+            vtk-suffix: "/"
+            vtk-prefix: ""
+            shells: "bash"
           - os: "windows-2022"
             vtk-libs: "vtk*.dll"
             vtk-suffix: "/"
@@ -149,12 +146,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: ["macos-15", "windows-2022"]
-        os: ["windows-2022"]
+        os: ["macos-15", "windows-2022"]
         python-version: ["3.13"]
         include:
-          # - os: "macos-15"
-          #   plat: "macosx_11_0_arm64 macosx_11_0_x86_64"
+          - os: "macos-15"
+            plat: "macosx_11_0_arm64 macosx_11_0_x86_64"
           - os: "windows-2022"
             plat: "win_amd64"
 
@@ -179,8 +175,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        python-version: ["3.13"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
 
     steps:
       - uses: actions/checkout@v4
@@ -225,12 +220,11 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-22.04", "ubuntu-22.04-arm"]
-        # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        python-version: ["3.13"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
-        # exclude:
-        #   - python-version: "3.14"
-        #     use-vtk: "vtk"
+        exclude:
+          - python-version: "3.14"
+            use-vtk: "vtk"
         include:
           - os: "ubuntu-22.04"
             runner: ubuntu-latest
@@ -262,29 +256,27 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: ["macos-15-intel", "macos-15", "windows-2022"]
-        os: ["windows-2022"]
-        # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        python-version: ["3.13"]
+        os: ["macos-15-intel", "macos-15", "windows-2022"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
-        # exclude:
-        #   - python-version: "3.14"
-        #     use-vtk: "vtk"
+        exclude:
+          - python-version: "3.14"
+            use-vtk: "vtk"
         include:
-          # - os: "macos-15"
-          #   delocate: delocate
-          #   plat: macosx_11_0_arm64
-          #   module: "OCP.*.so"
-          #   env: "MACOSX_DEPLOYMENT_TARGET=11.0"
-          #   shells: "bash"
-          #   ocp-source-tag: "macos-15"
-          # - os: "macos-15-intel"
-          #   delocate: delocate
-          #   plat: macosx_11_0_x86_64
-          #   module: "OCP.*.so"
-          #   env: "MACOSX_DEPLOYMENT_TARGET=11.0"
-          #   shells: "bash"
-          #   ocp-source-tag: "macos-15"
+          - os: "macos-15"
+            delocate: delocate
+            plat: macosx_11_0_arm64
+            module: "OCP.*.so"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.0"
+            shells: "bash"
+            ocp-source-tag: "macos-15"
+          - os: "macos-15-intel"
+            delocate: delocate
+            plat: macosx_11_0_x86_64
+            module: "OCP.*.so"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.0"
+            shells: "bash"
+            ocp-source-tag: "macos-15"
           - os: "windows-2022"
             delocate: delvewheel
             plat: win_amd64
@@ -321,23 +313,22 @@ jobs:
       matrix:
         os:
           [
-            # "macos-15-intel",
-            # "macos-15",
+            "macos-15-intel",
+            "macos-15",
             "ubuntu-22.04",
             "ubuntu-22.04-arm",
             "windows-2022",
           ]
-        # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        python-version: ["3.13"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
-        # exclude:
-        #   - python-version: "3.14"
-        #     use-vtk: "vtk"
+        exclude:
+          - python-version: "3.14"
+            use-vtk: "vtk"
         include:
-          # - os: "macos-15-intel"
-          #   runner: macos-15-intel
-          # - os: "macos-15"
-          #   runner: macos-15
+          - os: "macos-15-intel"
+            runner: macos-15-intel
+          - os: "macos-15"
+            runner: macos-15
           - os: "ubuntu-22.04"
             runner: ubuntu-22.04
           - os: "ubuntu-22.04-arm"
